[package]
name = "scaffolder"
version = "0.1.0"
edition = "2021"
description = "A helpful scaffolder for any kind of project"
authors = ["TheIcyColdPenguin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
directories = "5.0.1"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.5"
colored = "2.0.0"
libc = { version = "0.2.147", default-features = false }